# agentic-platform

./: .dockerignore  .env  .env.example  .gitignore  .rebuild  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_TEST.md  Dockerfile  Dockerfile.backend  GITLAB_WEBHOOK_SETUP.md  README.md  cloudbuild.yaml  curl_response.txt  curl_response_flash.txt  curl_response_pro.txt  curl_response_v3.txt  demo_input.json  demo_workflow.yaml  entrypoint.sh  gitlab_webhook.py  pyproject.toml  pytest.ini  requirements.txt  setup_real_llms.sh  start_all.sh  verify_llm_setup.sh  verify_mock_logic.py
docs/: CHECKLIST.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_TEST.md  FEATURE_TESTING_GUIDE.md  LANGGRAPH_DEVELOPMENT_PLAN.md  LANGGRAPH_PROGRESS.md  LANGGRAPH_UI_DEMO.md  LANGGRAPH_UI_IMPLEMENTATION.md  LLM_SETUP.md  MCP.md  MCP_IMPLEMENTATION_PLAN.md  MCP_RESEARCH.md  OCR_RECOVERY_REPORT.md  PHASE_9_COMPLETION_REPORT.md  PHASE_9_COMPLETION_SUMMARY.md  PHASE_9_FINAL_STATUS.md  PHASE_9_KICKOFF.md  PHASE_9_WEEK1_REPORT.md  PHASE_9_WEEK2_REPORT.md  PHASE_9_WEEK3_REPORT.md  QUICK_START.md  TECH_STACK_ANALYSIS.md  TESTING_MASTER_GUIDE.md  TESTING_QUICK_REFERENCE.md  UI_TEST_PLAN.md  adapters.md  api.md  architecture.md  integrations.md  roadmap.md  testing.md
docs/archive/: MCP_SESSION_SUMMARY.md  PHASE9_WEEK1_SUMMARY.md  PHASE9_WEEK2_COMPLETE.md  PHASE9_WEEK2_SUMMARY.md  READY_FOR_PRODUCTION.md  REAL_LLM_SETUP.md  mcp-guide-original.md
docs/decisions/: ADR-011-provider-pattern.md  ADR-012-hybrid-secret-management.md  ADR-013-langgraph-agent.md  adr-001-adapter-pattern.md  adr-001-immutable-audit-log.md  adr-002-artifact-hashing.md  adr-002-policy-middleware.md  adr-003-adapter-pattern.md  adr-004-policy-middleware.md  adr-005-model-selection.md  adr-006-tdd-milestones.md  adr-007-error-events.md  adr-008-artifact-store-integration.md  adr-009-google-vision-ocr.md  adr-009-monorepo-ui-backend.md  adr-010-mcp-server-integration.md
examples/workflows/: demo_langgraph_agent.py
sample_data/: sample_image_url.txt
scripts/: debug_download.py
scripts/verification/: verify_enterprise_mock.py  verify_tenancy.py  verify_ui_fixes.py
src/agentic_platform/: __init__.py  api.py  cli.py
src/platform/: __init__.py
ui/: MODERNIZE_UI_PLAN.md  README.md  agent_test.html  index.html  package-lock.json  package.json  vite.config.js
(+100 files in other folders)
