[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kre-agentic-platform"
version = "0.1.0"
description = "Multi-AI Agentic Platform (MVP)"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "google-cloud-vision>=3.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    # Phase 9: LangGraph Agent Orchestration
    "langgraph>=0.0.24",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-anthropic>=0.0.2",
    "langchain-openai>=0.0.2",
    "langchain-google-vertexai>=0.0.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
